--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/form-with-preview.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/form-with-preview.css
@@ -7,7 +7,10 @@
 }
 
 .from-with-preview > .yui-g > .yui-u {
-	width: 400px;
+	width: 405px;
+	height: 540px;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit .from-with-preview div.form-field > label,
@@ -22,7 +25,7 @@
 
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit .from-with-preview div.yui-g div.yui-u .two-column div.form-field div.autocomplete-block input.autocomplete-input,
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit .from-with-preview .two-column div.form-field div.object-finder .current-values{
-	width: 145px;
+	width: 140px;
 }
 
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit .from-with-preview .two-column div.form-field input[type=text]:not(.autocomplete-input),
