ALF-1784: Экранные формы входящего: форма редактирования
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6104 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
@@ -89,7 +89,8 @@
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit div.set > div.form-field > div > input[type=text]:not(.date-entry) {
     width: 675px !important;
 }
-.yui-skin-lecmTheme .yui-panel.metadata-form-edit div.set > div.form-field > input.formsCheckBox {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit div.set > div.form-field > input.formsCheckBox,
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit div.set > div.yui-g > div.yui-u div.form-field > input.formsCheckBox {
     margin-left: 200px;
 }
 
