ALF-1787: 3.4	Регистрация входящего 3.13	Проверка на повторность: - заготовка для процесса регистрации
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6127 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/lecm-association-search.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/lecm-association-search.css
@@ -25,3 +25,15 @@ div.object-finder div.search-picker input[type='text'].search-input {
 .yui-skin-lecmTheme .yui-panel div.form-field div.object-finder div.search-picker {
 	white-space: normal;
 }
+
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field div.object-finder div.search-picker input[type='text'].search-input {
+	width: 490px;
+}
+
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field div.object-finder div.search-picker + .current-values {
+	width: 100%;
+}
+
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field div.object-finder div.search-picker {
+	margin-bottom: 1.3em;
+}
