ALF-1784: Добавлены поля "Организация-отправитель" и "Адресат"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6162 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/form-with-preview.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/form-with-preview.css
@@ -9,8 +9,8 @@
 .from-with-preview > .yui-g > .yui-u {
 	width: 405px;
 	height: 550px;
-	/*overflow-x: hidden;*/
-	/*overflow-y: auto;*/
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit .from-with-preview div.form-field > label,
