ALF-1784: Добавлены поля "Организация-отправитель" и "Адресат"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6163 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/full-with-set.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/full-with-set.css
@@ -1,4 +1,5 @@
-.yui-skin-lecmTheme .yui-panel.metadata-form-edit .full-width div.form-field div.object-finder .current-values {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit .full-width div.form-field div.object-finder .current-values,
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit .full-width div.form-field select {
 	width: 75%;
 }
 
