[~] отчет Статистика по видам вхолдящих документов - подправлена легенда
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6171 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-incoming/repo/src/main/config/reportdefinitions/deploy/jasper/incoming-by-type-stat/incoming-by-type-stat.jrxml
+++ b/lecm-incoming/repo/src/main/config/reportdefinitions/deploy/jasper/incoming-by-type-stat/incoming-by-type-stat.jrxml
@@ -84,9 +84,9 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="50" splitType="Stretch">
+		<band height="70" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="98fecca2-e1a2-4978-9cc6-d6d85ac31eb4" mode="Opaque" x="0" y="19" width="271" height="30" forecolor="#FFFFFF" backcolor="#4BACC6"/>
+				<reportElement uuid="98fecca2-e1a2-4978-9cc6-d6d85ac31eb4" mode="Opaque" x="0" y="40" width="271" height="30" forecolor="#FFFFFF" backcolor="#4BACC6"/>
 				<box>
 					<pen lineWidth="1.0" lineColor="#78C0D4"/>
 					<topPen lineWidth="1.0" lineColor="#78C0D4"/>
@@ -100,7 +100,7 @@
 				<text><![CDATA[Вид документа]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="94509782-c440-40c8-bdad-13f05d0e1047" mode="Opaque" x="413" y="19" width="142" height="30" forecolor="#FFFFFF" backcolor="#4BACC6"/>
+				<reportElement uuid="94509782-c440-40c8-bdad-13f05d0e1047" mode="Opaque" x="413" y="40" width="142" height="30" forecolor="#FFFFFF" backcolor="#4BACC6"/>
 				<box>
 					<pen lineWidth="1.0" lineColor="#78C0D4"/>
 					<topPen lineWidth="1.0" lineColor="#78C0D4"/>
@@ -114,14 +114,14 @@
 				<text><![CDATA[Количество]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="f710bbcc-3ec1-4bff-bcaa-19263f08b8a4" x="0" y="0" width="555" height="20"/>
-				<textElement textAlignment="Center">
+				<reportElement uuid="f710bbcc-3ec1-4bff-bcaa-19263f08b8a4" x="0" y="0" width="555" height="40"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans Mono" size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Статистика по видам входящих документов]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="32838331-e8fe-4141-8f6c-5325809daee0" mode="Opaque" x="271" y="19" width="142" height="30" forecolor="#FFFFFF" backcolor="#4BACC6"/>
+				<reportElement uuid="32838331-e8fe-4141-8f6c-5325809daee0" mode="Opaque" x="271" y="40" width="142" height="30" forecolor="#FFFFFF" backcolor="#4BACC6"/>
 				<box>
 					<pen lineWidth="1.0" lineColor="#78C0D4"/>
 					<topPen lineWidth="1.0" lineColor="#78C0D4"/>
@@ -148,18 +148,18 @@
 	<summary>
 		<band height="379" splitType="Stretch">
 			<pie3DChart>
-				<chart theme="default">
+				<chart isShowLegend="true" theme="default">
 					<reportElement uuid="2374c51c-ec45-443a-becd-8a72550600cc" isPrintRepeatedValues="false" x="0" y="0" width="555" height="366"/>
 					<chartTitle/>
 					<chartSubtitle/>
 					<chartLegend/>
 				</chart>
 				<pieDataset>
-					<keyExpression><![CDATA[$F{col_DocType}]]></keyExpression>
+					<keyExpression><![CDATA[($F{col_DocType} != null && !$F{col_DocType}.equals("") ? $F{col_DocType} : "не указан")]]></keyExpression>
 					<valueExpression><![CDATA[$V{col_DocType_Count}]]></valueExpression>
 				</pieDataset>
-				<pie3DPlot isShowLabels="true" depthFactor="0.3" isCircular="true" labelFormat="{0} ({2})">
-					<plot/>
+				<pie3DPlot isShowLabels="true" depthFactor="0.15" isCircular="false" labelFormat="{0} ({2})">
+					<plot orientation="Horizontal"/>
 					<itemLabel>
 						<font fontName="DejaVu Sans Mono" isBold="true" isUnderline="false"/>
 					</itemLabel>
