ALF-1803: Добавлен новый контрол выбора Контрагентов и Представителей (Адресантов). GLOBAL: Второй раз исправлена ошибка с allowedNodes.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6195 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
@@ -64,7 +64,10 @@
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field div.object-finder {
     margin-bottom: 0;
 }
-.yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field div.object-finder .current-values {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field div.object-finder .current-values,
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field input.autocomplete-input[type="text"],
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field div.autocompleteCurrentValueDisplayInvisible,
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit div.yui-navset div.form-field div.autocompleteCurrentValueDisplayInvisible {
     width: 80%;
 }
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit div.form-field div.object-finder .show-picker,
