--- a/lecm-incoming/repo/src/main/config/reportdefinitions/deploy/jasper/incoming-by-type-stat/incoming-by-type-stat.jrxml
+++ b/lecm-incoming/repo/src/main/config/reportdefinitions/deploy/jasper/incoming-by-type-stat/incoming-by-type-stat.jrxml
@@ -17,7 +17,10 @@
 		<defaultValueExpression><![CDATA["ds-lecm-onk-incoming-type-stat.xml"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA["reportdefinitions/deploy/jasper/lecm-onk-incoming-type-stat/subreports/"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA["/reportdefinitions/deploy/jasper/incoming-by-type-stat/"]]></defaultValueExpression>
+	</parameter>
+	<parameter name="SubreportDataSource" class="net.sf.jasperreports.engine.JRDataSource">
+		<defaultValueExpression><![CDATA[$P{REPORT_DATA_SOURCE}]]></defaultValueExpression>
 	</parameter>
 	<queryString>
 		<![CDATA[]]>
@@ -25,32 +28,21 @@
 	<field name="col_DocType" class="java.lang.String">
 		<fieldDescription><![CDATA[Вид документа]]></fieldDescription>
 	</field>
-	<variable name="col_DocType_Count" class="java.lang.Integer" resetType="Group" resetGroup="grp_status" calculation="Count">
+	<field name="col_DocKind" class="java.lang.String">
+		<fieldDescription><![CDATA[Тип документа]]></fieldDescription>
+	</field>
+	<variable name="col_DocType_Count" class="java.lang.Integer" resetType="Group" resetGroup="grp_byType" calculation="Count">
 		<variableExpression><![CDATA[$F{col_DocType}]]></variableExpression>
 	</variable>
-	<variable name="col_DocType_Total" class="java.lang.Integer" calculation="Count">
+	<variable name="col_DocType_Total" class="java.lang.Integer" resetType="Group" resetGroup="grp_byKind" calculation="Count">
 		<variableExpression><![CDATA[$F{col_DocType}]]></variableExpression>
 	</variable>
-	<group name="grp_status">
-		<groupExpression><![CDATA[$F{col_DocType}]]></groupExpression>
+	<group name="grp_byKind">
+		<groupExpression><![CDATA[$F{col_DocKind}]]></groupExpression>
 		<groupHeader>
-			<band height="30">
-				<textField isBlankWhenNull="true">
-					<reportElement uuid="a78e3311-c474-4c27-bb2c-405a42186ba7" mode="Opaque" x="0" y="0" width="271" height="30"/>
-					<box leftPadding="10">
-						<pen lineWidth="1.0" lineColor="#78C0D4"/>
-						<topPen lineWidth="1.0" lineColor="#78C0D4"/>
-						<leftPen lineWidth="1.0" lineColor="#78C0D4"/>
-						<bottomPen lineWidth="1.0" lineColor="#78C0D4"/>
-						<rightPen lineWidth="1.0" lineColor="#78C0D4"/>
-					</box>
-					<textElement textAlignment="Left" verticalAlignment="Middle">
-						<font fontName="DejaVu Sans Mono"/>
-					</textElement>
-					<textFieldExpression><![CDATA[($F{col_DocType} != null && $F{col_DocType} != "" ) ? $F{col_DocType} : "не указан"]]></textFieldExpression>
-				</textField>
-				<textField evaluationTime="Group" evaluationGroup="grp_status" isBlankWhenNull="true">
-					<reportElement uuid="144400b9-71d3-4c7f-a10d-75d0e0bc5bc8" x="413" y="0" width="142" height="30"/>
+			<band height="60">
+				<staticText>
+					<reportElement uuid="6b5f2c84-9cd4-4d27-a499-6ddfd9b40cc6" stretchType="RelativeToTallestObject" mode="Opaque" x="256" y="30" width="153" height="30" isPrintWhenDetailOverflows="true" forecolor="#FFFFFF" backcolor="#4BACC6"/>
 					<box>
 						<pen lineWidth="1.0" lineColor="#78C0D4"/>
 						<topPen lineWidth="1.0" lineColor="#78C0D4"/>
@@ -59,12 +51,79 @@
 						<rightPen lineWidth="1.0" lineColor="#78C0D4"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="DejaVu Sans Mono"/>
+						<font fontName="DejaVu Sans Mono" isBold="true"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$V{col_DocType_Count}]]></textFieldExpression>
+					<text><![CDATA[Проценты]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="9ac677cf-1a8b-423e-b388-882cc2fa2837" stretchType="RelativeToTallestObject" mode="Opaque" x="409" y="30" width="146" height="30" isPrintWhenDetailOverflows="true" forecolor="#FFFFFF" backcolor="#4BACC6"/>
+					<box>
+						<pen lineWidth="1.0" lineColor="#78C0D4"/>
+						<topPen lineWidth="1.0" lineColor="#78C0D4"/>
+						<leftPen lineWidth="1.0" lineColor="#78C0D4"/>
+						<bottomPen lineWidth="1.0" lineColor="#78C0D4"/>
+						<rightPen lineWidth="1.0" lineColor="#78C0D4"/>
+					</box>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font fontName="DejaVu Sans Mono" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Итого по виду документа]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="e22a96eb-3b74-4513-a477-dd4c4069ea3c" stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="30" width="256" height="30" isPrintWhenDetailOverflows="true" forecolor="#FFFFFF" backcolor="#4BACC6"/>
+					<box>
+						<pen lineWidth="1.0" lineColor="#78C0D4"/>
+						<topPen lineWidth="1.0" lineColor="#78C0D4"/>
+						<leftPen lineWidth="1.0" lineColor="#78C0D4"/>
+						<bottomPen lineWidth="1.0" lineColor="#78C0D4"/>
+						<rightPen lineWidth="1.0" lineColor="#78C0D4"/>
+					</box>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font fontName="DejaVu Sans Mono" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Вид документа]]></text>
+				</staticText>
+				<textField>
+					<reportElement uuid="a38dd19c-4be4-410e-ac3e-cb9e78837c74" x="0" y="0" width="555" height="30"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font fontName="DejaVu Sans Mono" isBold="true"/>
+					</textElement>
+					<textFieldExpression><![CDATA[($F{col_DocKind} != null && $F{col_DocKind} != "") ? $F{col_DocKind} : "Не указан"]]></textFieldExpression>
 				</textField>
+			</band>
+		</groupHeader>
+		<groupFooter>
+			<band height="180">
+				<pie3DChart>
+					<chart isShowLegend="true" evaluationTime="Group" evaluationGroup="grp_byKind" theme="default">
+						<reportElement uuid="94c77f2a-d67e-4429-94bc-0163465abed9" stretchType="RelativeToTallestObject" x="0" y="0" width="555" height="180" isPrintWhenDetailOverflows="true"/>
+						<chartTitle>
+							<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+						</chartTitle>
+						<chartSubtitle/>
+						<chartLegend/>
+					</chart>
+					<pieDataset>
+						<dataset resetType="Group" resetGroup="grp_byKind"/>
+						<keyExpression><![CDATA[($F{col_DocType} != null && !$F{col_DocType}.equals("") ? $F{col_DocType} : "не указан")]]></keyExpression>
+						<valueExpression><![CDATA[$V{col_DocType_Count}]]></valueExpression>
+					</pieDataset>
+					<pie3DPlot isShowLabels="true" depthFactor="0.4" isCircular="false" labelFormat="{0} {2}">
+						<plot orientation="Horizontal"/>
+						<itemLabel>
+							<font fontName="DejaVu Sans Mono" isBold="true" isUnderline="false"/>
+						</itemLabel>
+					</pie3DPlot>
+				</pie3DChart>
+			</band>
+		</groupFooter>
+	</group>
+	<group name="grp_byType">
+		<groupExpression><![CDATA[$F{col_DocType}]]></groupExpression>
+		<groupHeader>
+			<band height="30">
 				<textField evaluationTime="Auto" pattern="#,##0.00 %" isBlankWhenNull="true">
-					<reportElement uuid="0197bbd2-a379-47b1-9026-466055c1a446" x="271" y="0" width="142" height="30"/>
+					<reportElement uuid="6ddd82f2-a979-4e0a-9066-149c269702a1" stretchType="RelativeToTallestObject" x="256" y="0" width="153" height="30" isPrintWhenDetailOverflows="true"/>
 					<box>
 						<pen lineWidth="1.0" lineColor="#78C0D4"/>
 						<topPen lineWidth="1.0" lineColor="#78C0D4"/>
@@ -77,6 +136,34 @@
 					</textElement>
 					<textFieldExpression><![CDATA[($V{col_DocType_Count}.doubleValue())/($V{col_DocType_Total}.doubleValue())]]></textFieldExpression>
 				</textField>
+				<textField evaluationTime="Group" evaluationGroup="grp_byType">
+					<reportElement uuid="165c237d-1277-4fd8-be44-36c446319a49" stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="0" width="256" height="30" isPrintWhenDetailOverflows="true"/>
+					<box leftPadding="10">
+						<pen lineWidth="1.0" lineColor="#78C0D4"/>
+						<topPen lineWidth="1.0" lineColor="#78C0D4"/>
+						<leftPen lineWidth="1.0" lineColor="#78C0D4"/>
+						<bottomPen lineWidth="1.0" lineColor="#78C0D4"/>
+						<rightPen lineWidth="1.0" lineColor="#78C0D4"/>
+					</box>
+					<textElement textAlignment="Left" verticalAlignment="Middle">
+						<font fontName="DejaVu Sans Mono"/>
+					</textElement>
+					<textFieldExpression><![CDATA[($F{col_DocType} != null && $F{col_DocType} != "" ) ? $F{col_DocType} : "не указан"]]></textFieldExpression>
+				</textField>
+				<textField evaluationTime="Group" evaluationGroup="grp_byType" isBlankWhenNull="true">
+					<reportElement uuid="1b4f9033-c554-42fd-9e98-b9594d8d115d" stretchType="RelativeToTallestObject" x="409" y="0" width="146" height="30" isPrintWhenDetailOverflows="true"/>
+					<box>
+						<pen lineWidth="1.0" lineColor="#78C0D4"/>
+						<topPen lineWidth="1.0" lineColor="#78C0D4"/>
+						<leftPen lineWidth="1.0" lineColor="#78C0D4"/>
+						<bottomPen lineWidth="1.0" lineColor="#78C0D4"/>
+						<rightPen lineWidth="1.0" lineColor="#78C0D4"/>
+					</box>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font fontName="DejaVu Sans Mono"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$V{col_DocType_Count}]]></textFieldExpression>
+				</textField>
 			</band>
 		</groupHeader>
 	</group>
@@ -84,87 +171,14 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="70" splitType="Stretch">
-			<staticText>
-				<reportElement uuid="98fecca2-e1a2-4978-9cc6-d6d85ac31eb4" mode="Opaque" x="0" y="40" width="271" height="30" forecolor="#FFFFFF" backcolor="#4BACC6"/>
-				<box>
-					<pen lineWidth="1.0" lineColor="#78C0D4"/>
-					<topPen lineWidth="1.0" lineColor="#78C0D4"/>
-					<leftPen lineWidth="1.0" lineColor="#78C0D4"/>
-					<bottomPen lineWidth="1.0" lineColor="#78C0D4"/>
-					<rightPen lineWidth="1.0" lineColor="#78C0D4"/>
-				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="DejaVu Sans Mono" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Вид документа]]></text>
-			</staticText>
-			<staticText>
-				<reportElement uuid="94509782-c440-40c8-bdad-13f05d0e1047" mode="Opaque" x="413" y="40" width="142" height="30" forecolor="#FFFFFF" backcolor="#4BACC6"/>
-				<box>
-					<pen lineWidth="1.0" lineColor="#78C0D4"/>
-					<topPen lineWidth="1.0" lineColor="#78C0D4"/>
-					<leftPen lineWidth="1.0" lineColor="#78C0D4"/>
-					<bottomPen lineWidth="1.0" lineColor="#78C0D4"/>
-					<rightPen lineWidth="1.0" lineColor="#78C0D4"/>
-				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="DejaVu Sans Mono" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Количество]]></text>
-			</staticText>
+		<band height="40" splitType="Stretch">
 			<staticText>
 				<reportElement uuid="f710bbcc-3ec1-4bff-bcaa-19263f08b8a4" x="0" y="0" width="555" height="40"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans Mono" size="14" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Статистика по видам входящих документов]]></text>
-			</staticText>
-			<staticText>
-				<reportElement uuid="32838331-e8fe-4141-8f6c-5325809daee0" mode="Opaque" x="271" y="40" width="142" height="30" forecolor="#FFFFFF" backcolor="#4BACC6"/>
-				<box>
-					<pen lineWidth="1.0" lineColor="#78C0D4"/>
-					<topPen lineWidth="1.0" lineColor="#78C0D4"/>
-					<leftPen lineWidth="1.0" lineColor="#78C0D4"/>
-					<bottomPen lineWidth="1.0" lineColor="#78C0D4"/>
-					<rightPen lineWidth="1.0" lineColor="#78C0D4"/>
-				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="DejaVu Sans Mono" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Процент]]></text>
+				<text><![CDATA[Статистика по видам документов]]></text>
 			</staticText>
 		</band>
 	</title>
-	<detail>
-		<band splitType="Stretch"/>
-	</detail>
-	<columnFooter>
-		<band splitType="Stretch"/>
-	</columnFooter>
-	<pageFooter>
-		<band splitType="Stretch"/>
-	</pageFooter>
-	<summary>
-		<band height="379" splitType="Stretch">
-			<pie3DChart>
-				<chart isShowLegend="true" theme="default">
-					<reportElement uuid="2374c51c-ec45-443a-becd-8a72550600cc" isPrintRepeatedValues="false" x="0" y="0" width="555" height="366"/>
-					<chartTitle/>
-					<chartSubtitle/>
-					<chartLegend/>
-				</chart>
-				<pieDataset>
-					<keyExpression><![CDATA[($F{col_DocType} != null && !$F{col_DocType}.equals("") ? $F{col_DocType} : "не указан")]]></keyExpression>
-					<valueExpression><![CDATA[$V{col_DocType_Count}]]></valueExpression>
-				</pieDataset>
-				<pie3DPlot isShowLabels="true" depthFactor="0.15" isCircular="false" labelFormat="{0} ({2})">
-					<plot orientation="Horizontal"/>
-					<itemLabel>
-						<font fontName="DejaVu Sans Mono" isBold="true" isUnderline="false"/>
-					</itemLabel>
-				</pie3DPlot>
-			</pie3DChart>
-		</band>
-	</summary>
 </jasperReport>
