ALF-1784: 1.4 Экранные формы входящего
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6212 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/form-with-preview.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/form-with-preview.css
@@ -38,7 +38,7 @@
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit .from-with-preview .two-column div.date-block + a,
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit .from-with-preview .two-column input.date-entry + a {
 	position: absolute;
-	bottom: 0;
+	bottom: 8px;
 	right: 0;
 }
 
@@ -58,7 +58,7 @@
 
 .from-with-preview  div.association-auto-complete-selected-item > span > a,
 .from-with-preview  div.association-auto-complete-selected-item-even > span > a {
-	max-width: 250px;
+	max-width: 245px;
 }
 
 .from-with-preview  div.association-auto-complete-selected-item > span.not-person,
