--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata-form.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata-form.css
@@ -105,6 +105,6 @@
     margin-right: 3px;
 }
 
-.yui-skin-lecmTheme div[id*="-view-repsesentative"] {
-    margin-left: 25px;
-}
+/*.yui-skin-lecmTheme div[id*="-view-repsesentative"] {*/
+    /*margin-left: 25px;*/
+/*}*/
