--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
@@ -110,3 +110,20 @@
     margin-bottom: 16px;
 }
 
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit .two-column div.form-field div.object-finder .current-values,
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit .two-column div.form-field input.autocomplete-input[type="text"],
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit .two-column div.form-field div.autocompleteCurrentValueDisplayInvisible,
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit .two-column div.yui-navset div.form-field div.autocompleteCurrentValueDisplayInvisible {
+	width: 189px;
+}
+.yui-skin-lecmTheme .yui-panel .two-column div.form-field div.autocompleteCurrentValueDisplay div.association-auto-complete-selected-item > span.not-person,
+.yui-skin-lecmTheme .yui-panel .two-column div.form-field div.autocompleteCurrentValueDisplay div.association-auto-complete-selected-item-even > span.not-person,
+.yui-skin-lecmTheme .yui-panel .two-column div.form-field div.autocompleteCurrentValueDisplayInvisible div.association-auto-complete-selected-item > span.not-person,
+.yui-skin-lecmTheme .yui-panel .two-column div.form-field div.autocompleteCurrentValueDisplayInvisible div.association-auto-complete-selected-item-even > span.not-person {
+	max-width: 170px;
+	display: inline-block;
+	white-space: nowrap;
+	overflow-x: hidden;
+	text-overflow: ellipsis;
+}
+
