ALF-1784: 1.4 Экранные формы входящего
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6216 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/dnd-uploader-control.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/dnd-uploader-control.css
@@ -64,6 +64,7 @@
 	padding: 10px;
 	text-align: center;
 	white-space: normal;
+	margin-bottom: 0;
 }
 .dnd-uploader div.big-uploader-block fieldset legend {
 	color: #666;
