ALF-1784: 1.4 Экранные формы входящего
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6218 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/dnd-uploader-control.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/dnd-uploader-control.css
@@ -1,3 +1,6 @@
+.yui-skin-lecmTheme .yui-panel div.form-field.dnd-uploader {
+	padding-top: 5px;
+}
 .dnd-uploader ul.attachments-list {
     width: 330px;
     min-height: 102px;
