--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/form-with-preview.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/form-with-preview.css
@@ -1,5 +1,6 @@
 .from-with-preview > .yui-g > .yui-u.first {
 	width: 600px;
+	overflow: hidden;
 }
 
 .documents-list-create-dialog-container .from-with-preview > .yui-g > .yui-u.first {
@@ -8,7 +9,7 @@
 
 .from-with-preview > .yui-g > .yui-u {
 	width: 405px;
-	height: 513px;
+	height: 520px;
 	overflow-x: hidden;
 	overflow-y: auto;
 }
@@ -76,7 +77,7 @@
 	margin-left: 0;
 }
 
-.yui-skin-lecmTheme .yui-panel .from-with-preview div.form-field {
+.yui-skin-lecmTheme .yui-panel.metadata-form-edit .from-with-preview div.form-field {
 	margin-bottom: 0;
 }
 
